--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
     <div class="container">
-        <h2> Top 5 Movie In India</h2>
+        <h2> Top  Movies In India</h2>
 
         <div  class="list"> </div>
 
